--- a/front/app/components/DropzoneUpdate/DropzoneUpdateButton.module.css
+++ b/front/app/components/DropzoneUpdate/DropzoneUpdateButton.module.css
@@ -1,25 +1,35 @@
 .wrapper {
-    position: relative;
-    margin-bottom: rem(30px);
-    cursor: pointer;
-  }
-  
-  .dropzone {
-    border-width: 1px;
-    padding: 1rem;
-    border-radius: var(--mantine-radius-md);
-    padding-bottom: 50px;
-    border-style: dashed;
-    background-color: light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-5))
-  }
-  
-  .icon {
-    color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-3));
-  }
-  
-  .control {
-    position: absolute;
-    width: 250px;
-    left: calc(50% - 125px);
-    bottom: -20px;
-  }
+  position: relative;
+  margin-bottom: rem(30px);
+  cursor: pointer;
+}
+
+.animationWrapper {
+  max-width: 500px;
+  max-height: 500px;
+  margin: 0 auto;
+  padding: 0%;
+}
+
+.dropzone {
+  border-width: 1px;
+  padding: 1rem;
+  border-radius: var(--mantine-radius-md);
+  padding-bottom: 50px;
+  border-style: dashed;
+  background-color: light-dark(
+    var(--mantine-color-gray-3),
+    var(--mantine-color-dark-5)
+  );
+}
+
+.icon {
+  color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-3));
+}
+
+.control {
+  position: absolute;
+  width: 250px;
+  left: calc(50% - 125px);
+  bottom: -20px;
+}
