--- a/app/page.module.css
+++ b/app/page.module.css
@@ -33,7 +33,7 @@
 }
 
 .blurBackground {
-  background-color: rgba(255, 255, 255, 0.616);
+  /* background-color: rgba(255, 255, 255, 0.616); */
   backdrop-filter: blur(10px);
   border-radius: 10px;
   color: black;
