Table for show an add attachments and descriptions, complete

--- a/app/responsible/reports/ResponsibleReportsPage.module.css
+++ b/app/responsible/reports/ResponsibleReportsPage.module.css
@@ -11,14 +11,14 @@
     padding: 0%;
   }
   
-  .dropzone {
-    border-width: 1px;
-    border-radius: var(--mantine-radius-md);
-    border-style: dashed;
-    background-color: light-dark(
-      var(--mantine-color-gray-3),
-      var(--mantine-color-dark-5)
-    );
+  .pillDrive {
+    background-color: var(--mantine-color-teal-5);
+    color: var(--mantine-color-dark-9);
+  }
+
+  .pillFile {
+    background-color: var(--mantine-color-gray-5);
+    color: var(--mantine-color-dark-9);
   }
   
   .icon {
