Added functionallity to delet attachments and save draft

--- a/app/responsible/reports/ResponsibleReportsPage.module.css
+++ b/app/responsible/reports/ResponsibleReportsPage.module.css
@@ -12,7 +12,7 @@
   }
   
   .pillDrive {
-    background-color: var(--mantine-color-teal-5);
+    background-color: var(--mantine-color-lime-3);
     color: var(--mantine-color-dark-9);
   }
 
