--- a/app/components/navbar/Navbar.module.css
+++ b/app/components/navbar/Navbar.module.css
@@ -3,6 +3,7 @@
   margin-bottom: rem(30px);
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  margin-bottom: rem(50px);
 }
 
 .inner {
