--- a/app/page.module.css
+++ b/app/page.module.css
@@ -59,7 +59,7 @@
 @media (max-width: 720px) {
   .imageColumn {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: auto;
     overflow: visible;
   }
